infra/manager-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager-app
  template:
    metadata:
      labels:
        app: manager-app
    spec:
      containers:
      - name: manager-app-container
        image: daring-cyclops-manager:1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 6379
