infra/worker-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyclops-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyclops-worker
  template:
    metadata:
      labels:
        app: cyclops-worker
    spec:
      containers:
      - name: worker-app-container
        image: daring-cyclops-worker:1
        imagePullPolicy: Never
        ports:
          - containerPort: 4190
          - containerPort: 6379
