infra/manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyclops-service
spec:
  selector:
    app: cyclops-manager
  type: NodePort
  ports:
    - port: 8088
