infra/echo-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-demo
  template:
    metadata:
      labels:
        app: echo-demo
    spec:
      containers:
      - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        # image: gcr.io/google_containers/echoserver:1.0
        imagePullPolicy: Always
        name: echo-demo
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-demo
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP  
  selector:
    app: echo-demo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($apikey_is_ok != 1) {
      return 401;
      }
spec:
  rules:
  - host: echo.braingang.net
    http:
      paths:
      - path: /
        backend:
          serviceName: echo-demo
          servicePort: 80
