infra/manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cyclops.braingang.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cyclops-service
            port:
              number: 8088
